CHANGE: move resize to own func

--- a/ZvadoLib/ZvadoLib.vcxproj
+++ b/ZvadoLib/ZvadoLib.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Array.h" />
+    <ClInclude Include="List.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
