ADD: string class, new tests

--- a/ZvadoLib/ZvadoLib.vcxproj.filters
+++ b/ZvadoLib/ZvadoLib.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="List.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="String.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
