--- a/ZvadoLib/ZvadoLib.vcxproj
+++ b/ZvadoLib/ZvadoLib.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="List.h" />
+    <ClInclude Include="String.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
