ADD: ZString base working class

--- a/ZvadoLib/ZvadoLib.vcxproj.filters
+++ b/ZvadoLib/ZvadoLib.vcxproj.filters
@@ -20,10 +20,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="List.h">
+    <ClInclude Include="ZString.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="String.h">
+    <ClInclude Include="ZList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
