--- a/ZvadoLib/ZvadoLib.vcxproj
+++ b/ZvadoLib/ZvadoLib.vcxproj
@@ -139,8 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="List.h" />
-    <ClInclude Include="String.h" />
+    <ClInclude Include="ZList.h" />
+    <ClInclude Include="ZString.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
